# kalam

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  cypress.config.ts  index.html  package-lock.json  package.json  skills-lock.json  tasks.ps1  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1773327864534-f0084fa11392b8.mjs
.cursor/commands/: code-review.md  setup-new-feature.md
.cursor/plans/: apply_prototype_to_main_app.plan.md  comprehensive_latency_debugging_plan_2691df0c.plan.md  readme_improvement_plan_c6cc6547.plan.md
.cursor/rules/: changelog.mdc  sister-project.mdc
.cursor/skills/frontend-design/: SKILL.md
.cursor/skills/svelte5-best-practices/: SKILL.md
.doc/: DISTRIBUTION.md  PRD.md  To-Do.md  framework-comparison.md  kalam-vs-superwhisper.md  latency-profiling-windows.md  prd-gaps-addressed.md  prd-gaps-and-issues.md  research.md  stt-provider-research.md  superwhisper-competitor-review.md  todo.md  upgrade-plan.md  vad-threshold-diagnosis.md
.doc/diagnostics/: toggle-failure-2026-04-01.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.pencil/: v1-prototype.pen
cypress/e2e/: onboarding.cy.ts  settings-stt.cy.ts
cypress/support/: dev-bridge-handlers.ts  e2e.ts
docs/: CNAME  WEBSITE_BACKUP_REFERENCE.txt  business.html  design-system.html  documentation.html  download.html  index.html  privacy.html  robots.txt  site.js  sitemap.xml  terms.html  theme.css
docs/remotion/: package-lock.json  package.json
docs/remotion/src/: CrossPlatform.tsx  DictationDemo.tsx  PrivacyComparison.tsx  Root.tsx
scripts/: get-kalam-hwnd.ps1  kill-project.js  run-overlay-message-log.ps1
src/: App.svelte  app.css  types.spec.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  icons.icns  nsis-hooks.nsh  tauri.conf.json  test_enigo.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/recipes/: command.json  email.json  message.json  notes.json
src-tauri/scripts/: macos-postinstall.sh  postrm.sh
src-tauri/src/: app_log.rs  db.rs  dev_bridge.rs  external_foreground.rs  focus.rs  hotkey.rs  hotkey_win.rs  lib.rs  main.rs  overlay_macos.rs  overlay_message_log_win.rs  overlay_win.rs  recipe_library.rs  system_reqs.rs
src-tauri/src/app_info/: mod.rs
src-tauri/src/app_info/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/: capture.rs  device.rs  filter.rs  mod.rs  playback.rs  resample.rs  vad.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/commands/: dictionary.rs  entries.rs  llm.rs  mod.rs
src-tauri/src/config/: mod.rs  privacy.rs  settings.rs
src-tauri/src/context/: mod.rs
src-tauri/src/context/platform/: mod.rs  stub.rs  windows.rs
src-tauri/src/diagnostics/: commands.rs  config_analyzer.rs  hook_probe.rs  hotkey_test.rs  key_capture.rs  mod.rs  report.rs  system_check.rs
src-tauri/src/formatting/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/injection/: mod.rs
src-tauri/src/models/: entry.rs  log.rs  mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/stt/: groq.rs  lifecycle.rs  mod.rs  models.rs  openai.rs  provider.rs  sensevoice.rs  sidecars.rs
src-tauri/src/sync/: blobs.rs  client.rs  crypto.rs  diff.rs  merge.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/tests/: stt_integration_tests.rs
src/components/: ConfirmDestructiveDialog.svelte  DashboardApex.svelte  FilterPreview.svelte  HotkeyCapture.svelte  Overlay.svelte  RecipeLibrary.svelte  StatusBar.svelte  TiptapEditor.svelte
src/components/ui/: SearchFilterBar.svelte  SidePanel.svelte
src/components/views/: History.svelte  HistoryDetail.svelte  NoteDetail.svelte  Notes.svelte  ReminderDetail.svelte  Reminders.svelte  SnippetDetail.svelte  TaskDetail.svelte  Tasks.svelte
src/lib/: backend.ts  detailReturnStore.ts  dictationState.ts  historyDetailStore.ts  historySttChip.ts  languages.ts  modeAccent.ts  noteDetailStore.ts  platformHotkey.ts  reminderDetailStore.ts  sensitiveAppPatterns.ts  sidebarDictation.ts  snippetDetailStore.ts  sveltyPickerLocale.ts  taskDetailStore.ts  telemetry.ts
src/lib/api/: appInfo.ts  db.ts
src/lib/editor/: content.ts  editor-styles.css  slash-commands.ts
src/pages/: About.svelte  Diagnostics.svelte  Dictation.svelte  Dictionary.svelte  History.svelte  Home.svelte  Onboarding.svelte  Prototype.svelte  Settings.svelte  Snippets.svelte
