[package]
name = "kalam-voice"
version = "0.1.0"
description = "Kalam — open-source voice dictation. Free alternative to Whisperflow."
authors = ["Kalam Team"]
license = "MIT"
repository = "https://github.com/kalam-voice/kalam"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"

# Audio
cpal = "0.15"
rubato = "0.14"
ringbuf = "0.4"
rodio = "0.19"

# Text injection
enigo = "0.2"
arboard = "3"

# STT
reqwest = { version = "0.12", features = ["multipart", "json", "stream", "blocking"] }
async-trait = "0.1"
futures-util = "0.3"
sha2 = "0.10"

# General
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
directories = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
parking_lot = "0.12"
rdev = "0.5.3"
lazy_static = "1.5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
rand = "0.8"
active-win-pos-rs = "0.9"
sysinfo = "0.31"

# Overlay window handle (for ShowWindow without focus)
raw-window-handle = "0.6"

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libappindicator = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
