[package]
name = "kalam-voice"
version = "0.1.0-beta.2"
description = "Kalam — open-source voice dictation. Free alternative to Whisperflow."
authors = ["Kalam Team"]
license = "MIT"
repository = "https://github.com/afaraha8403/kalam"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

# Audio
cpal = "0.15"
rubato = "0.14"
ringbuf = "0.4"
rodio = "0.19"

# Text injection
enigo = "0.2"
arboard = "3"

# STT
reqwest = { version = "0.12", features = ["multipart", "json", "stream", "blocking"] }
async-trait = "0.1"
futures-util = "0.3"
sha2 = "0.10"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Archive extraction for local models
tar = "0.4"
bzip2 = "0.4"
zip = "0.6"

# General
tokio = { version = "1", features = ["full"] }
# Dev-only: HTTP bridge so browser (Vite dev) can read DB when Tauri app is running
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio-util = { version = "0.7" }
rfd = "0.14"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
directories = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
parking_lot = "0.12"
rdev = { git = "https://github.com/fufesou/rdev" }
lazy_static = "1.5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
aes-gcm = "0.10"
rand = "0.8"
active-win-pos-rs = "0.9"
sysinfo = "0.31"
base64 = "0.22"

# Overlay window handle (for ShowWindow without focus)
raw-window-handle = "0.6"
tauri-plugin-opener = "2"

# Platform-specific
[target.'cfg(windows)'.dependencies]
# Optional: KALAM_USE_WILLHOOK=1 uses willhook for hotkeys on Windows. See .doc/latency-profiling-windows.md.
willhook = "0.6"
win32-version-info = "0.3"
systemicons = "0.9"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
plist = "1.7"
systemicons = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libappindicator = "0.9"
freedesktop-desktop-entry = "0.7"
freedesktop-icon-lookup = "0.1"
systemicons = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
dev-bridge = ["dep:axum", "dep:tower-http"]

[dev-dependencies]
hound = "3.5"
